cluster/apps/dev/harbor/service.yaml
# this is just to give us a shorter name
# for other internal services to be able
# to reach the registry
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: harbor
    component: core
    release: harbor
