cluster/apps/dev/harbor/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: harbor-ingress-notary
  namespace: harbor
spec:
  hosts:
  - notary.${CLUSTER_DOMAIN}
  gateways:
  - system-ingress/gateway
  http:
  - route:
    - destination:
        host: harbor-notary-server.harbor.svc.cluster.local
        port:
          number: 4443
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: harbor-ingress
  namespace: harbor
spec:
  hosts:
  - r.${CLUSTER_DOMAIN}
  gateways:
  - system-ingress/gateway
  http:
  - name: registry
    match:
    - uri:
        prefix: "/api/"
    - uri:
        prefix: "/service/"
    - uri:
        prefix: "/v2"
    - uri:
        prefix: "/chartrepo/"
    - uri:
        prefix: "/c/"
    route:
    - destination:
        host: harbor-core.harbor.svc.cluster.local
        port:
          number: 80
  - name: portal
    match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: harbor-portal.harbor.svc.cluster.local
        port:
          number: 80
